Archive2/78/cc8f17c9833574/output
main.cpp: In function 'int main()':
main.cpp:22:5: error: redefinition of 'int main()'
 int main (void)
     ^
main.cpp:3:5: note: 'int main()' previously defined here
 int main (void)
     ^
main.cpp:30:9: error: redeclaration of 'float perimetro_de_circulo'
   float perimetro_de_circulo = pi*2*radio;
         ^
main.cpp:24:9: note: 'float perimetro_de_circulo' previously declared here
   float perimetro_de_circulo=0;
         ^
